--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,10 @@
 
   {% include head.html %}
 
+    {% if page.use_math %}
+      {% include mathjax_support %}
+    {% endif %}
+
   <body>
 
     {% include header.html %}
