--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -4,6 +4,9 @@ layout: default
 <article class="post">
 
   <header class="post-header">
+    {% if page.use_math %}
+      {% include mathjax_support %}
+    {% endif %}
     <h1 class="post-title">{{ page.title }}</h1>
   </header>
 
